# sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs  pagination.rs  spot.rs  websocket.rs
src/: client.rs  error.rs  exchanges.rs  http.rs  l4_reconstructor.rs  lib.rs  orderbook_reconstructor.rs  types.rs
src/resources/: candles.rs  data_quality.rs  funding.rs  instruments.rs  l2_orderbook.rs  l3_orderbook.rs  l4_orderbook.rs  liquidations.rs  mod.rs  open_interest.rs  orderbook.rs  orders.rs  spot.rs  trades.rs  web3.rs
src/ws/: client.rs  mod.rs
